--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
-<p>
-    <h1>Aleksandra Luniova</h1>
-</p>
+<p><h1>Aleksandra Luniova</h1></p>
 <img src="./1.jpg" alt="my photo">
-<p>
-    <h3>Contacts for communication:</h3>
-</p>
+<p><h3>Contacts for communication:</h3></p>
 <ul>
     <li>Email - Santa.Clays@icloud.com</li>
     <li>Discord - Aleksandra-Luniova (@Aleks#5292)</li>
 </ul>
-<p>
-    <h3>About me</h3>
-</p>
+<p><h3>About me</h3></p>
 <p>There is no work experience in the IT field. English level A1. I want to master this profession, it attracts me by the fact that you can develop in it until the end of your life and never meet the ceiling of opportunities.</p>
