--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>document</title>  	
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     </head>
+    <body>
 <p><h1>Aleksandra Luniova</h1>
 <img src="./1.jpg" alt="my photo">
     <h3>Contacts for communication:</h3>
@@ -13,4 +14,5 @@
 </ul>
     <h3>About me</h3>
 <p>There is no work experience in the IT field. English level A1. I want to master this profession, it attracts me by the fact that you can develop in it until the end of your life and never meet the ceiling of opportunities.</p>
+</body>
 </html>
